feat(card): 添加资源规划局，使用 onCardPlayedWithPayment 实现新效果

--- a/src/locales/cn/community_cards.json
+++ b/src/locales/cn/community_cards.json
@@ -49,6 +49,10 @@
   "(Each other player who loses 3 M€ or more due to this action draws 1 card.)":"（每个因这一行动损失3 M€或更多的其他玩家将抽1张牌。)",
   "${0} paid ${1} M€ in ${2} and draws 1 card.": "${0} 在 ${2} 中支付了 ${1} M€ 并抽了1张牌。",
   "${0} paid ${1} M€ in ${2}.": "${0} 在 ${2} 中支付了 ${1} M€。",
-  "${0} collected a total of ${1} M€ via ${2}.": "${0} 通过 ${2} 共计获得了 ${1} M€。"
+  "${0} collected a total of ${1} M€ via ${2}.": "${0} 通过 ${2} 共计获得了 ${1} M€。",
+
+  "Resource Planning Bureau": "资源规划局",
+  "pay": "支付",
+  "(Effect: Each time you play a project card, if you pay 0 M€ and at least 1 other resource, gain 2 M€.)": "（效果：每当你打出项目卡，若你未支付任何M€，且支付了至少1个其他资源，获得2M€。）"
 
 }
