--- a/src/locales/cn/community_cards.json
+++ b/src/locales/cn/community_cards.json
@@ -53,6 +53,9 @@
 
   "Resource Planning Bureau": "资源规划局",
   "pay": "支付",
-  "(Effect: Each time you play a project card, if you pay 0 M€ and at least 1 other resource, gain 2 M€.)": "（效果：每当你打出项目卡，若你未支付任何M€，且支付了至少1个其他资源，获得2M€。）"
+  "(Effect: Each time you play a project card, if you pay 0 M€ and at least 1 other resource, gain 2 M€.)": "（效果：每当你打出项目卡，若你未支付任何M€，且支付了至少1个其他资源，获得2M€。）",
+
+  "Space Wedding": "太空婚礼",
+  "Reveal 2 cards. Keep one and give the other to another player.": "展示两张牌，保留一张，将另一张交给任意其他玩家。"
 
 }
