--- a/src/locales/cn/community_cards.json
+++ b/src/locales/cn/community_cards.json
@@ -56,6 +56,11 @@
   "(Effect: Each time you play a project card, if you pay 0 M€ and at least 1 other resource, gain 2 M€.)": "（效果：每当你打出项目卡，若你未支付任何M€，且支付了至少1个其他资源，获得2M€。）",
 
   "Space Wedding": "太空婚礼",
-  "Reveal 2 cards. Keep one and give the other to another player.": "展示两张牌，保留一张，将另一张交给任意其他玩家。"
+  "Reveal 2 cards. Keep one and give the other to another player.": "展示两张牌，保留一张，将另一张交给任意其他玩家。",
+
+  "Infinite Monkey Theorem": "无限猴子理论",
+  "(Action: Reveal the top card of the deck and place it sideways on this card. For each new tag gained this way, place 1 animal here.)": "（行动：展示牌堆顶的一张牌，并将其横置于此卡上。每当你因此获得一个新标志，便在此卡上放置1个动物资源。）",
+  "Then gain 1M€ per animal here.": "然后你获得等同于此卡上动物数量的 M€。",
+  "Cannot gain animals by other means.": "不能通过其他方式获得动物资源。"
 
 }
