--- a/src/locales/cn/community_cards.json
+++ b/src/locales/cn/community_cards.json
@@ -45,6 +45,7 @@
   "The next card costs ${0} M€ to maximize the LunaChain skill": "下张牌需要支付 ${0} M€ 以最大触发连月技能",
 
   "Tithes": "什一税",
+  "TITHES": "什一税",
   "(Action: Each other player loses 10% (rounded down) of their M€. You gain the total amount lost.)": "（行动：每个其他玩家失去其10%(向下取整)的M€，你获得这些失去的M€。）",
   "(Each other player who loses 3 M€ or more due to this action draws 1 card.)":"（每个因这一行动损失3 M€或更多的其他玩家将抽1张牌。)",
   "${0} paid ${1} M€ in ${2} and draws 1 card.": "${0} 在 ${2} 中支付了 ${1} M€ 并抽了1张牌。",
@@ -58,9 +59,12 @@
   "Space Wedding": "太空婚礼",
   "Reveal 2 cards. Keep one and give the other to another player.": "展示两张牌，保留一张，将另一张交给任意其他玩家。",
 
-  "Infinite Monkey Theorem": "无限猴子理论",
+  "Infinite Monkey Theorem": "无限猴子定理",
   "(Action: Reveal the top card of the deck and place it sideways on this card. For each new tag gained this way, place 1 animal here.)": "（行动：展示牌堆顶的一张牌，并将其横置于此卡上。每当你因此获得一个新标志，便在此卡上放置1个动物资源。）",
   "Then gain 1M€ per animal here.": "然后你获得等同于此卡上动物数量的 M€。",
-  "Cannot gain animals by other means.": "不能通过其他方式获得动物资源。"
+  "Cannot gain animals by other means.": "不能通过其他方式获得动物资源。",
+
+  "Golden Finger": "金手指",
+  "GOLDEN FINGER": "金手指"
 
 }
