feat: 新增蓝卡《卉植繁茂》，打出植物标卡时提升植物产出

--- a/src/locales/cn/community_cards.json
+++ b/src/locales/cn/community_cards.json
@@ -65,6 +65,9 @@
   "Cannot gain animals by other means.": "不能通过其他方式获得动物资源。",
 
   "Golden Finger": "金手指",
-  "GOLDEN FINGER": "金手指"
+  "GOLDEN FINGER": "金手指",
+
+  "Floral Bloom Surge": "卉植繁茂",
+  "(Effect: When you play a plant tag card (including this), increase your plant production by 1.)": "（效果：当你打出一张植物志牌时（包括此牌）时，提升1点植物产能。）"
 
 }
