--- a/src/locales/cn/community_cards.json
+++ b/src/locales/cn/community_cards.json
@@ -22,61 +22,6 @@
   "Gain 6 M€. Play a Venus card from your hand and add 4 floaters to it.":"获得6 M€。从手牌中打出一张金星卡，并放置4个云资源",
 
   "Venus First":"金星优先",
-  "Raise Venus 2 steps. Draw 2 Venus cards from the deck.":"增加2点金星改造等级。抽两张金星卡",
+  "Raise Venus 2 steps. Draw 2 Venus cards from the deck.":"增加2点金星改造等级。抽两张金星卡"
 
-  "Project Reorganization":"项目重整",
-  "(Action: Spend 2 energy to look at the top 4 cards of the discard pile. Keep 1 and return the rest in order.)":"（行动：花费2个电力资源，观看弃牌顶的4张牌并保留其中1张牌，然后将其余牌按原顺序放回弃牌堆顶。）",
-
-  "Asteroid Material Research Center":"小行星物质研究中心",
-  "(Effect: When your blue card gains an asteroid resource, refresh its action (max 2 times per generation per card))":"（效果：当你的蓝卡获得小行星资源后，刷新其行动次数（每时代每卡最多2次））",
-  "(Effect: When you play an event card with \"asteroid\" in its name, add 1 asteroid resource to any card)":"（效果：当你打出名字带有“小行星（asteroid）”的事件牌时，向任意卡牌添加1个小行星资源）",
-
-  "You start with 48 M€.":"起始获得48M€。",
-  "(Effect: After you play a project card, if this completes a new set of red, green, and blue project cards, draw 1 card.)":"（效果：当你打出项目卡后，若因此新凑齐一套红/绿/蓝项目卡，抽1张牌。）",
-  "(Action: Reveal and discard 2 cards to draw 1 card of a color not among the discarded ones.)":"（行动：展示并弃置2张牌，抽1张未被弃置颜色的牌。）",
-
-  "LunaChain": "连月",
-  "(Effect: When the actual paid M€ of your current and previous project cards differ by X (X < 3), gain (3 - X) M€.)": "（效果：当你打出的项目卡实际支付的M€与上一张项目卡相差X(X<3)时，你获得(3-X)M€。）",
-  "${0} gained ${1} M€ due to ${2} effect.": " ${0} 因 ${2} 效果，获得了 ${1} M€。",
-  "${0} has accumulated ${1} M€, averaging ${2} M€ per project card (LunaChain God 🌙)": "${0} 累计获得了 ${1} M€，平均每张项目卡获得 ${2} M€ (连月之神 🌙)",
-  "${0} has accumulated ${1} M€, averaging ${2} M€ per project card (LunaChain Baker 🍰)": "${0} 累计获得了 ${1} M€，平均每张项目卡获得 ${2} M€ (连月糕手 🍰)",
-  "${0} has accumulated ${1} M€, averaging ${2} M€ per project card (LunaChain Champion 💪)": "${0} 累计获得了 ${1} M€，平均每张项目卡获得 ${2} M€ (连月强者 💪)",
-  "${0} has accumulated ${1} M€, averaging ${2} M€ per project card (LunaChain Newbie 🥬)": "${0} 累计获得了 ${1} M€，平均每张项目卡获得 ${2} M€ (连月菜鸡 🥬)",
-  "The next card costs ${0} M€ to maximize the LunaChain skill": "下张牌需要支付 ${0} M€ 以最大触发连月技能",
-
-  "Tithes": "什一税",
-  "TITHES": "什一税",
-  "(Action: Each other player loses 10% (rounded down) of their M€. You gain the total amount lost.)": "（行动：每个其他玩家失去其10%(向下取整)的M€，你获得这些失去的M€。）",
-  "(Each other player who loses 3 M€ or more due to this action draws 1 card.)":"（每个因这一行动损失3 M€或更多的其他玩家将抽1张牌。)",
-  "${0} paid ${1} M€ in ${2} and draws 1 card.": "${0} 在 ${2} 中支付了 ${1} M€ 并抽了1张牌。",
-  "${0} paid ${1} M€ in ${2}.": "${0} 在 ${2} 中支付了 ${1} M€。",
-  "${0} collected a total of ${1} M€ via ${2}.": "${0} 通过 ${2} 共计获得了 ${1} M€。",
-
-  "Resource Planning Bureau": "资源规划局",
-  "pay": "支付",
-  "(Effect: Each time you play a project card, if you pay 0 M€ and at least 1 other resource, gain 2 M€.)": "（效果：每当你打出项目卡，若你未支付任何M€，且支付了至少1个其他资源，获得2M€。）",
-
-  "Space Wedding": "太空婚礼",
-  "Reveal 2 cards. Keep one and give the other to another player.": "展示两张牌，保留一张，将另一张交给任意其他玩家。",
-
-  "Infinite Monkey Theorem": "无限猴子定理",
-  "(Action: Reveal the top card of the deck and place it sideways on this card. For each new tag gained this way, place 1 animal here.)": "（行动：展示牌堆顶的一张牌，并将其横置于此卡上。每当你因此获得一个新标志，便在此卡上放置1个动物资源。）",
-  "Then gain 1M€ per animal here.": "然后你获得等同于此卡上动物数量的 M€。",
-  "Cannot gain animals by other means.": "不能通过其他方式获得动物资源。",
-
-  "Golden Finger": "金手指",
-  "GOLDEN FINGER": "金手指",
-
-  "Floral Bloom Surge": "卉植繁茂",
-  "(Effect: When you play a plant tag card (including this), increase your plant production by 1.)": "（效果：当你打出一张植物志牌时（包括此牌）时，提升1点植物产能。）",
-
-  "Ecological Pavilion": "生态展馆",
-  "Requires a plant tag, a microbe tag, and an animal tag. Draw 2 cards.": "需要拥有植物、微生物和动物标志。抽2张牌。",
-
-  "Gambling District Las Vegas": "赌城拉斯维加斯",
-  "Place this tile. It counts as a City.": "放置此板块，其视为一座城市。",
-  "When a tile is placed adjacent to it, the player must pay 3 M€ more, then roll 1d6 to gain that many M€.": "当有板块放置在其相邻位置时，该玩家需额外支付 3 M€，然后掷 1d6，获得等量 M€。",
-  "If the result is 5 or 6, they also draw a card.": "若结果为 5 或 6，该玩家额外抽 1 张牌。",
-  "${0} rolled ${1} and gained ${2} M€, then drew a card from ${3}.": "${0} 掷出 ${1}，获得了 ${2} M€，还额外抽了一张牌(来自 ${3})。",
-  "${0} rolled ${1} and gained ${2} M€ from ${3}.": "${0} 掷出 ${1}，获得了 ${2} M€(来自 ${3})。"
 }
