--- a/src/locales/cn/mingyue_cards.json
+++ b/src/locales/cn/mingyue_cards.json
@@ -29,6 +29,9 @@
     "When a tile is placed adjacent to it, the player must pay 3 M€ more, then roll 1d6 to gain that many M€.": "当有板块放置在其相邻位置时，该玩家需额外支付 3 M€，然后掷 1d6，获得等量 M€。",
     "If the result is 5 or 6, they also draw a card.": "若结果为 5 或 6，该玩家额外抽 1 张牌。",
     "${0} rolled ${1} and gained ${2} M€, then drew a card from ${3}.": "${0} 掷出 ${1}，获得了 ${2} M€，还额外抽了一张牌(来自 ${3})。",
-    "${0} rolled ${1} and gained ${2} M€ from ${3}.": "${0} 掷出 ${1}，获得了 ${2} M€(来自 ${3})。"
+    "${0} rolled ${1} and gained ${2} M€ from ${3}.": "${0} 掷出 ${1}，获得了 ${2} M€(来自 ${3})。",
+
+    "Artifact Harvest": "奇物丰收",
+    "Requires 7 oceans. Gain 1 plants for each type of non-standard resource you have (up to 7 types counted).": "需要7片海洋。你每拥有1种非标准资源，获得1植物（最多计入7种资源）。"
 
 }
