新增中文翻译：前序2、星战、Promo 新卡、UI
新增中文翻译内容：

- 前序2（Prelude 2）卡牌
- 星战扩展（Star Wars）
- Promo 新卡（如 Big Cavern 等）
- UI 字符串优化与补全

--- a/src/locales/cn/pathfinder_preludes.json
+++ b/src/locales/cn/pathfinder_preludes.json
@@ -22,7 +22,7 @@
 
   "Research Grant": "研发资助",
   "Research Grant:Pathfinders": "研发资助：探路者",
-  "(Increase your energy production by 1. Gain 14 M€.)": "（将你的电力产能提高1。获得14M€。）",
+  "(Increase your energy production 1 step. Gain 14 M€.)": "（将你的电力产能提高1。获得14M€。）",
 
   "Survey Mission": "探索任务",
   "(Gain 5 steel. Land-claim three non-reserved spaces in a triangle shape. Gain all placement bonuses. Only you may place tiles there, and will gain placement bonuses again.)": "（获得5个钢铁资源。以三角形布局圈占3个非保留区域，并获得它们的放置奖励。只有你可以在那里放置板块并再次获得放置奖励。）",
